<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    tools:context=".StartActivity">

    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/ic_action_more"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:fontFamily="casual"
            android:text="@string/flight_game"
            android:textSize="39sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/diamond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/point1"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ruby" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/point3"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/skull" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/game_over"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_margin="12dp"
                android:baselineAligned="false"
                android:contentDescription="@string/todo"
                android:src="@drawable/bomb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:baselineAligned="false"
                android:text="@string/game_over"
                android:textSize="21sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_action_play"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/shop"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_action_shop"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</RelativeLayout>