<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    tools:context="com.coelho.flightgame.ShopActivity"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/planes_shop"
        android:textSize="39sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/ruby_coins"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="124dp"
        android:layout_toEndOf="@+id/tv_coins"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ruby" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@drawable/ic_action_home"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/shopP1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:padding="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/plane" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shopP2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="#88808080"
                android:padding="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/plane2" />

                <RelativeLayout
                    android:id="@+id/unlock2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/locked"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/p2_coins"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="1dp"
                        android:layout_toEndOf="@+id/price2"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ruby" />
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/shopP3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="#88808080"
                android:padding="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/plane3" />

                <RelativeLayout
                    android:id="@+id/unlock3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/locked"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/p3_coins"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="3dp"
                        android:layout_toEndOf="@+id/price3"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ruby" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shopP4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="#88808080"
                android:padding="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/plane4" />

                <RelativeLayout
                    android:id="@+id/unlock4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/locked"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/p4_coins"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="3dp"
                        android:layout_toEndOf="@+id/price4"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ruby" />
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>